--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
-        "prismic/php-sdk": "5.0.1"
+        "prismic/php-sdk": "5.0.1",
+        "spatie/schema-org": "^2.14"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
