--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
         "symfony/thanks": "^1.0"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/Helper.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
